--- a/.github/workflows/frontendUnitTests.yml
+++ b/.github/workflows/frontendUnitTests.yml
@@ -1,4 +1,4 @@
-name: Frontend Unit Tests
+name: Backend Unit Tests
 
 on:
   push:
@@ -9,10 +9,9 @@ on:
       - main1
 
 jobs:
-  test-frontend:
-    name: Test and Build React Frontend
+  install-frontend:
+    name: Install Dependencies
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -20,13 +19,39 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
 
       - name: Install Dependencies
         run: npm ci
 
+  test-frontend:
+    name: Run Unit Tests
+    runs-on: ubuntu-latest
+    needs: install-frontend
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
       - name: Run Unit Tests
         run: npm test
+
+  build-frontend:
+    name: Build React App
+    runs-on: ubuntu-latest
+    needs: test-frontend
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
 
       - name: Build React App
         run: npm run build
