--- a/.github/workflows/backendUnitTests.yml
+++ b/.github/workflows/backendUnitTests.yml
@@ -3,10 +3,10 @@ name: Backend Unit Tests
 on:
   push:
     branches:
-      - main1
+      - main
   pull_request:
     branches:
-      - main1
+      - main
 
 jobs:
   test-backend:
