--- a/.github/workflows/frontendUnitTests.yml
+++ b/.github/workflows/frontendUnitTests.yml
@@ -3,10 +3,10 @@ name: Frontend Unit Tests
 on:
   push:
     branches:
-      - main1
+      - main
   pull_request:
     branches:
-      - main1
+      - main
 
 jobs:
   install-frontend:
@@ -21,8 +21,12 @@ jobs:
         with:
           node-version: 18
 
+      - name: Clear npm cache
+        run: npm cache clean --force  
+        
       - name: Install Dependencies
-        run: npm ci
+        run: npm install
+        # run: npm ci # should use this ideally?
 
   test-frontend:
     name: Run Unit Tests
@@ -40,24 +44,24 @@ jobs:
       - name: Run Unit Tests
         run: npm test
 
-  build-frontend:
-    name: Build React App
-    runs-on: ubuntu-latest
-    needs: test-frontend
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+  # build-frontend:
+  #   name: Build React App
+  #   runs-on: ubuntu-latest
+  #   needs: test-frontend
+  #   steps:
+  #     - name: Checkout Code
+  #       uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
+  #     - name: Set up Node.js
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: 18
 
-      - name: Build React App
-        run: npm run build
+  #     - name: Build React App
+  #       run: npm run build
 
-      - name: Upload Build Artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: react-build
-          path: build/
+  #     - name: Upload Build Artifacts
+  #       uses: actions/upload-artifact@v3
+  #       with:
+  #         name: react-build
+  #         path: build/
