--- a/.github/workflows/integrationTests.yml
+++ b/.github/workflows/integrationTests.yml
@@ -3,7 +3,7 @@ name: Integration Tests
 on:
   push:
     branches:
-      - main1
+      - issue-28
   pull_request:
     branches:
       - main1
@@ -31,6 +31,9 @@ jobs:
         with:
           python-version: 3.9
 
+      - name: Install React Dependencies
+        run: npm install
+
       - name: Install Backend Dependencies
         run: pip install -r requirements.txt
 
@@ -38,22 +41,32 @@ jobs:
       #   uses: actions/download-artifact@v3
       #   with:
       #     name: react-build
+      - run: npm install -g serve
+
       - name: Build React App
-        run: npm run build
+        run: CI=false npm run build
+
 
       - name: Serve React App
-        run: npx serve -s build &
+        run: npx serve -s build -l 3000 &
         env:
-          PORT: 5001 # Ensure this doesn't conflict with Flask's port
+          PORT: 3000 # Ensure this doesn't conflict with Flask's port
+      # - name: test
+      #   run: npm start
 
       - name: Start Backend Server
         run: flask run &
         env:
           FLASK_APP: app.py
-          FLASK_RUN_PORT: 5000 # Ensure Flask is running on a known port
+          FLASK_RUN_PORT: 5001 # Ensure Flask is running on a known port
+
+
 
       - name: Install Playwright
         run: npx playwright install
+
+      - name: Install Playwright Dependencies
+        run: npx playwright install-deps
 
       - name: Run Integration Tests
         run: npx playwright test
