--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "@testing-library/react": "^16.0.1",
     "jest": "^27.5.1",
     "prettier": "^3.4.0",
-    "react-test-renderer": "^18.3.1"
+    "react-test-renderer": "^18.3.1",
+    "wait-on": "^8.0.1"
   },
   "engines": {
     "node": ">=16.0.0"
