--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-multi-date-picker": "^4.5.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4",
